enhance loan management